--- a/.github/workflows/workflow-build.yml
+++ b/.github/workflows/workflow-build.yml
@@ -23,18 +23,26 @@ jobs:
         with:
           ref: ${{ env.HEAD_REF }}
           repository: ${{ github.event.pull_request.head.repo.full_name || github.repository }}
-      # Modified from https://github.com/rmacklin/fetch-through-merge-base
-      - name: Fetch
+      # Set up common variables for git operations
+      - name: Setup git refs
+        id: git-refs
         run: |
           # Strip refs/heads/ prefix if it exists
           BASE_REF_CLEAN=${BASE_REF#refs/heads/}
           HEAD_REF_CLEAN=${HEAD_REF#refs/heads/}
-
-          git fetch --progress --depth=1 origin "+refs/heads/$BASE_REF_CLEAN:refs/heads/$BASE_REF_CLEAN"
+          echo "base-ref=$BASE_REF_CLEAN" >> $GITHUB_OUTPUT
+          echo "head-ref=$HEAD_REF_CLEAN" >> $GITHUB_OUTPUT
+      # Modified from https://github.com/rmacklin/fetch-through-merge-base
+      - name: Fetch
+        env:
+          CLEAN_BASE_REF: ${{ steps.git-refs.outputs.base-ref }}
+          CLEAN_HEAD_REF: ${{ steps.git-refs.outputs.head-ref }}
+        run: |
+          git fetch --progress --depth=1 origin "+refs/heads/$CLEAN_BASE_REF:refs/heads/$CLEAN_BASE_REF"
           MAX_ATTEMPTS=10
           ATTEMPT=0
-          while [ -z "$( git merge-base "refs/heads/$BASE_REF_CLEAN" "$HEAD_REF" )" ] && [ "$ATTEMPT" -lt "$MAX_ATTEMPTS" ]; do
-            git fetch -q --deepen=10 origin "refs/heads/$BASE_REF_CLEAN" "$HEAD_REF"
+          while [ -z "$( git merge-base "refs/heads/$CLEAN_BASE_REF" "$CLEAN_HEAD_REF" )" ] && [ "$ATTEMPT" -lt "$MAX_ATTEMPTS" ]; do
+            git fetch -q --deepen=10 origin "refs/heads/$CLEAN_BASE_REF" "$CLEAN_HEAD_REF"
             ATTEMPT=$((ATTEMPT + 1))
           done
           if [ "$ATTEMPT" -ge "$MAX_ATTEMPTS" ]; then
@@ -43,8 +51,11 @@ jobs:
           fi
       - name: Get merge base
         id: merge-base
+        env:
+          CLEAN_BASE_REF: ${{ steps.git-refs.outputs.base-ref }}
+          CLEAN_HEAD_REF: ${{ steps.git-refs.outputs.head-ref }}
         run: |
-          echo "merge-base=$(git merge-base origin/$BASE_REF $HEAD_REF || git rev-parse $BASE_REF)" >> $GITHUB_OUTPUT
+          echo "merge-base=$(git merge-base "origin/$CLEAN_BASE_REF" "$CLEAN_HEAD_REF" || git rev-parse origin/"$CLEAN_BASE_REF")" >> $GITHUB_OUTPUT
   build-all:
     runs-on: lynx-ubuntu-24.04-xlarge
     needs: get-merge-base
