--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -30,6 +30,7 @@ env:
   TURBO_TELEMETRY_DISABLED: 1
 jobs:
   check:
+    timeout-minutes: 30
     runs-on: ${{ inputs.runs-on }}
     permissions: {}
     steps:
