--- a/.github/workflows/code-scanning.yml
+++ b/.github/workflows/code-scanning.yml
@@ -10,6 +10,7 @@ on:
 
 jobs:
   codeql:
+    timeout-minutes: 10
     name: CodeQL Analyze (${{ matrix.language }})
     # Runner size impacts CodeQL analysis time. To learn more, please see:
     #   - https://gh.io/recommended-hardware-resources-for-running-codeql
@@ -86,6 +87,7 @@ jobs:
           category: "/language:${{matrix.language}}"
 
   zizmor:
+    timeout-minutes: 10
     runs-on: lynx-ubuntu-24.04-medium
     permissions:
       security-events: write
