--- a/.github/workflows/pull-request-content-check.yml
+++ b/.github/workflows/pull-request-content-check.yml
@@ -15,6 +15,7 @@ jobs:
   validate-pr-title:
     name: Validate PR title
     runs-on: lynx-ubuntu-24.04-medium
+    timeout-minutes: 10
     steps:
       # https://github.com/amannn/action-semantic-pull-request
       - uses: amannn/action-semantic-pull-request@0723387faaf9b38adef4775cd42cfd5155ed6017 # v5.5.3
