--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,7 @@ jobs:
     uses: ./.github/workflows/workflow-bundle-analysis.yml
   code-style-check:
     runs-on: lynx-ubuntu-24.04-medium
+    timeout-minutes: 10
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
         with:
