--- a/.github/workflows/workflow-bench.yml
+++ b/.github/workflows/workflow-bench.yml
@@ -6,6 +6,7 @@ env:
   TURBO_TELEMETRY_DISABLED: 1
 jobs:
   nodejs-benchmark:
+    timeout-minutes: 10
     # CodSpeed does not support merge_group event.
     #
     # Error: Event merge_group is not supported by CodSpeed
