--- a/.github/workflows/workflow-bench.yml
+++ b/.github/workflows/workflow-bench.yml
@@ -6,6 +6,8 @@ env:
   TURBO_TELEMETRY_DISABLED: 1
 jobs:
   nodejs-benchmark:
+    permissions:
+      contents: read
     timeout-minutes: 10
     # CodSpeed does not support merge_group event.
     #
