--- a/.github/workflows/workflow-build.yml
+++ b/.github/workflows/workflow-build.yml
@@ -8,6 +8,8 @@ env:
   TURBO_TELEMETRY_DISABLED: 1
 jobs:
   get-merge-base:
+    permissions:
+      contents: read
     runs-on: lynx-ubuntu-24.04-medium
     timeout-minutes: 5
     env:
@@ -62,6 +64,8 @@ jobs:
         run: |
           echo "merge-base=$(git merge-base "$CLEAN_BASE_REF" "$CLEAN_HEAD_REF" || git rev-parse "$CLEAN_BASE_REF")" >> $GITHUB_OUTPUT
   build-all:
+    permissions:
+      contents: read
     runs-on: lynx-ubuntu-24.04-xlarge
     timeout-minutes: 30
     needs: get-merge-base
