--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,8 +20,16 @@ concurrency:
   cancel-in-progress: true
 jobs:
   test:
-    runs-on: lynx-ubuntu-24.04-xlarge
-    timeout-minutes: 10
+    name: Test (${{ matrix.runs-on.name }})
+    runs-on: ${{ matrix.runs-on.label }}
+    strategy:
+      matrix:
+        runs-on:
+          - label: lynx-ubuntu-24.04-xlarge
+            name: Ubuntu
+          - label: lynx-windows-2022-large
+            name: Windows
+    timeout-minutes: 30
     permissions:
       contents: read
     steps:
@@ -62,6 +70,6 @@ jobs:
       - uses: actions-rust-lang/setup-rust-toolchain@9d7e65c320fdb52dcd45ffaa68deb6c02c8754d9 # v1
         with:
           components: rustfmt
-          cache-key: test-${{ runner.os }}
+          cache: false
       - name: Format
         run: cargo fmt --check
