ci: disable Rust test on Windows

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,8 +27,8 @@ jobs:
         runs-on:
           - label: lynx-ubuntu-24.04-xlarge
             name: Ubuntu
-          - label: lynx-windows-2022-large
-            name: Windows
+          # - label: lynx-windows-2022-large
+          #   name: Windows
     timeout-minutes: 30
     permissions:
       contents: read
