--- a/packages/react/runtime/package.json
+++ b/packages/react/runtime/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@lynx-js/react": "workspace:*",
     "@lynx-js/react-transform": "workspace:*",
+    "@lynx-js/types": "3.3.0",
     "@types/react": "^18.3.23",
     "@vitejs/plugin-react": "4.5.1",
     "@vitest/coverage-v8": "^3.2.2",
