--- a/packages/react/runtime/package.json
+++ b/packages/react/runtime/package.json
@@ -22,12 +22,8 @@
     "@lynx-js/react-transform": "workspace:*",
     "@lynx-js/types": "3.3.0",
     "@types/react": "^18.3.23",
-    "@vitejs/plugin-react": "4.5.1",
-    "@vitest/coverage-v8": "^3.2.3",
-    "@vitest/ui": "^3.2.3",
     "esbuild": "^0.25.5",
-    "pretty-format": "^29.7.0",
-    "vitest": "^3.2.3"
+    "pretty-format": "^29.7.0"
   },
   "peerDependencies": {
     "@types/react": "^18.0.0"
