--- a/.github/workflows/code-scanning.yml
+++ b/.github/workflows/code-scanning.yml
@@ -105,7 +105,7 @@ jobs:
           pnpm build
       - name: ESLint Check
         run: |
-          pnpm add -D @microsoft/eslint-formatter-sarif
+          pnpm add -D -w @microsoft/eslint-formatter-sarif
           pnpm eslint -f @microsoft/sarif -o results.sarif . --cache --cache-strategy content
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@ce28f5bb42b7a9f2c824e633a3f6ee835bab6858 # v3
