--- a/.github/workflows/code-scanning.yml
+++ b/.github/workflows/code-scanning.yml
@@ -89,6 +89,9 @@ jobs:
   eslint:
     timeout-minutes: 10
     runs-on: lynx-ubuntu-24.04-medium
+    permissions:
+      # required for all workflows
+      security-events: write
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
         with:
