--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -28,9 +28,9 @@ catalogs:
 
   # Rspack monorepo packages
   rspack:
-    "@rspack/cli": "1.3.15"
-    "@rspack/core": "1.3.15"
-    "@rspack/test-tools": "1.3.15"
+    "@rspack/cli": "1.4.0-rc.0"
+    "@rspack/core": "1.4.0-rc.0"
+    "@rspack/test-tools": "1.4.0-rc.0"
 
 overrides:
   "@rspack/core": "$@rspack/core"
